Enable player and buildable shadows for Ultra

--- a/main/presets/ultra.cfg
+++ b/main/presets/ultra.cfg
@@ -14,4 +14,5 @@ r_ext_texture_filter_anisotropic 16
 r_heathaze 1
 r_texturemode "GL_LINEAR_MIPMAP_LINEAR"
 r_hdrRender 1
-
+cg_playerShadows 1
+cg_buildableShadows 1
