--- a/pkg/unvanquished_src.dpkdir/presets/intermediate.cfg
+++ b/pkg/unvanquished_src.dpkdir/presets/intermediate.cfg
@@ -13,3 +13,7 @@ r_ext_multisample 4
 r_ext_texture_filter_anisotropic 4
 r_heathaze 0
 r_texturemode "GL_LINEAR_MIPMAP_LINEAR"
+r_hdrRendering 0
+cg_playerShadows 0
+cg_buidlableShadows 0
+vid_restart
