--- a/pkg/unvanquished_src.dpkdir/presets/low.cfg
+++ b/pkg/unvanquished_src.dpkdir/presets/low.cfg
@@ -13,3 +13,7 @@ r_ext_multisample 2
 r_ext_texture_filter_anisotropic 2
 r_heathaze 0
 r_texturemode "GL_LINEAR_MIPMAP_NEAREST"
+r_hdrRendering 0
+cg_playerShadows 0
+cg_buidlableShadows 0
+vid_restart
