Fix some settings and make sure prests override each other when executed. vid_restart to ensure settings take effect.

--- a/main/presets/intermediate.cfg
+++ b/main/presets/intermediate.cfg
@@ -13,3 +13,7 @@ r_ext_multisample 4
 r_ext_texture_filter_anisotropic 4
 r_heathaze 0
 r_texturemode "GL_LINEAR_MIPMAP_LINEAR"
+r_hdrRendering 0
+cg_playerShadows 0
+cg_buidlableShadows 0
+vid_restart
