--- a/main/presets/ultra.cfg
+++ b/main/presets/ultra.cfg
@@ -13,6 +13,7 @@ r_ext_multisample 16
 r_ext_texture_filter_anisotropic 16
 r_heathaze 1
 r_texturemode "GL_LINEAR_MIPMAP_LINEAR"
-r_hdrRender 1
+r_hdrRendering 1
 cg_playerShadows 1
 cg_buildableShadows 1
+vid_restart
