Make some dependancies conditional on BUILD_* macros so the code can be built without them

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -809,7 +809,7 @@ if( NOT ENABLE_QVM_COMPAT )
 endif()
 
 # SDL, required for all targets on win32 because of iconv
-if( BUILD_CLIENT OR WIN32 )
+if( BUILD_CLIENT OR BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD OR WIN32 )
   find_package( SDL ${OPTIONAL_WIN32} )
   mark_as_advanced( SDLMAIN_LIBRARY SDL_LIBRARY SDL_INCLUDE_DIR )
   if( SDL_FOUND )
@@ -861,7 +861,7 @@ else()
 endif()
 
 # Speex
-if( USE_VOIP )
+if( BUILD_CLIENT AND USE_VOIP )
   find_package( Speex )
   if( SPEEX_FOUND )
     include_directories( ${SPEEX_INCLUDE_DIR} )
@@ -879,148 +879,170 @@ if( USE_MUMBLE )
 endif()
 
 # Ogg
-find_package( Ogg ${OPTIONAL_WIN32} )
-if( OGG_FOUND )
-  include_directories( ${OGG_INCLUDE_DIRS} )
-  set( LIBS_CLIENT ${LIBS_CLIENT} ${OGG_LIBRARIES} )
-else()
-  include_directories( ${LIB_DIR}/libogg/include )
-  if( ARCH STREQUAL "x86" )
-    set( LIBS_CLIENT ${LIBS_CLIENT} ${LIB_DIR}/libogg/libs/win32/release/libogg.lib )
-  elseif( ARCH STREQUAL "x86_64" )
-    set( LIBS_CLIENT ${LIBS_CLIENT} ${LIB_DIR}/libogg/libs/win64/release/libogg.lib )
+if( BUILD_CLIENT )
+  find_package( Ogg ${OPTIONAL_WIN32} )
+  if( OGG_FOUND )
+    include_directories( ${OGG_INCLUDE_DIRS} )
+    set( LIBS_CLIENT ${LIBS_CLIENT} ${OGG_LIBRARIES} )
+  else()
+    include_directories( ${LIB_DIR}/libogg/include )
+    if( ARCH STREQUAL "x86" )
+      set( LIBS_CLIENT ${LIBS_CLIENT} ${LIB_DIR}/libogg/libs/win32/release/libogg.lib )
+    elseif( ARCH STREQUAL "x86_64" )
+      set( LIBS_CLIENT ${LIBS_CLIENT} ${LIB_DIR}/libogg/libs/win64/release/libogg.lib )
+    endif()
   endif()
 endif()
 
 # Vorbis
-add_definitions( -DUSE_CODEC_VORBIS )
-find_package( Vorbis ${OPTIONAL_WIN32} )
-if( VORBIS_FOUND )
-  include_directories( ${VORBIS_INCLUDE_DIRS} )
-  set( LIBS_CLIENT ${LIBS_CLIENT} ${VORBIS_LIBRARIES} )
-else()
-  include_directories( ${LIB_DIR}/libvorbis/include )
-  if( ARCH STREQUAL "x86" )
-    set( LIBS_CLIENT ${LIBS_CLIENT}
-      ${LIB_DIR}/libvorbis/libs/Win32/Release/libvorbis.lib
-      ${LIB_DIR}/libvorbis/libs/Win32/Release/libvorbisfile.lib
-    )
-  elseif( ARCH STREQUAL "x86_64" )
-    set( LIBS_CLIENT ${LIBS_CLIENT}
-      ${LIB_DIR}/libvorbis/libs/x64/Release/libvorbis.lib
-      ${LIB_DIR}/libvorbis/libs/x64/Release/libvorbisfile.lib
-    )
+if( BUILD_CLIENT )
+  add_definitions( -DUSE_CODEC_VORBIS )
+  find_package( Vorbis ${OPTIONAL_WIN32} )
+  if( VORBIS_FOUND )
+    include_directories( ${VORBIS_INCLUDE_DIRS} )
+    set( LIBS_CLIENT ${LIBS_CLIENT} ${VORBIS_LIBRARIES} )
+  else()
+    include_directories( ${LIB_DIR}/libvorbis/include )
+    if( ARCH STREQUAL "x86" )
+      set( LIBS_CLIENT ${LIBS_CLIENT}
+        ${LIB_DIR}/libvorbis/libs/Win32/Release/libvorbis.lib
+        ${LIB_DIR}/libvorbis/libs/Win32/Release/libvorbisfile.lib
+      )
+    elseif( ARCH STREQUAL "x86_64" )
+      set( LIBS_CLIENT ${LIBS_CLIENT}
+        ${LIB_DIR}/libvorbis/libs/x64/Release/libvorbis.lib
+        ${LIB_DIR}/libvorbis/libs/x64/Release/libvorbisfile.lib
+      )
+    endif()
   endif()
 endif()
 
 # Theora
-add_definitions( -DUSE_CIN_THEORA )
-find_package( Theora ${OPTIONAL_WIN32} )
-if( THEORA_FOUND )
-  include_directories( ${THEORA_INCLUDE_DIRS} )
-  set( LIBS_CLIENT ${LIBS_CLIENT} ${THEORA_LIBRARIES} )
-else()
-  include_directories( ${LIB_DIR}/libtheora/include )
-  if( ARCH STREQUAL "x86" )
-    set( LIBS_CLIENT ${LIBS_CLIENT} ${LIB_DIR}/libtheora/libs/win32/release/libtheora.lib )
-  elseif( ARCH STREQUAL "x86_64" )
-    set( LIBS_CLIENT ${LIBS_CLIENT} ${LIB_DIR}/libtheora/libs/win64/release/libtheora.lib )
+if( BUILD_CLIENT )
+  add_definitions( -DUSE_CIN_THEORA )
+  find_package( Theora ${OPTIONAL_WIN32} )
+  if( THEORA_FOUND )
+    include_directories( ${THEORA_INCLUDE_DIRS} )
+    set( LIBS_CLIENT ${LIBS_CLIENT} ${THEORA_LIBRARIES} )
+  else()
+    include_directories( ${LIB_DIR}/libtheora/include )
+    if( ARCH STREQUAL "x86" )
+      set( LIBS_CLIENT ${LIBS_CLIENT} ${LIB_DIR}/libtheora/libs/win32/release/libtheora.lib )
+    elseif( ARCH STREQUAL "x86_64" )
+      set( LIBS_CLIENT ${LIBS_CLIENT} ${LIB_DIR}/libtheora/libs/win64/release/libtheora.lib )
+    endif()
   endif()
 endif()
 
 # WebP
-find_package( WebP )
-if( WEBP_FOUND )
-  include_directories( ${WEBP_INCLUDE_DIRS} )
-  set( LIBS_RENDERER ${LIBS_RENDERER} ${WEBP_LIBRARIES} )
-else()
-  add_subdirectory( ${LIB_DIR}/libwebp ${OBJ_DIR}/libwebp )
-  include_directories( ${LIB_DIR}/libwebp )
-  set( LIBS_RENDERER ${LIBS_RENDERER} INTERNAL_WEBP )
+if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+  find_package( WebP )
+  if( WEBP_FOUND )
+    include_directories( ${WEBP_INCLUDE_DIRS} )
+    set( LIBS_RENDERER ${LIBS_RENDERER} ${WEBP_LIBRARIES} )
+  else()
+    add_subdirectory( ${LIB_DIR}/libwebp ${OBJ_DIR}/libwebp )
+    include_directories( ${LIB_DIR}/libwebp )
+    set( LIBS_RENDERER ${LIBS_RENDERER} INTERNAL_WEBP )
+  endif()
 endif()
 
 # JPEG
-find_package( JPEG )
-if( JPEG_FOUND )
-  include_directories( ${JPEG_INCLUDE_DIR} )
-  set( LIBS_RENDERER ${LIBS_RENDERER} ${JPEG_LIBRARIES} )
-else()
-  add_subdirectory( ${LIB_DIR}/jpeg ${OBJ_DIR}/libjpeg )
-  include_directories( ${LIB_DIR}/jpeg )
-  set( LIBSRC_RENDERER ${LIBSRC_RENDERER} ${JPEGLIST} )
+if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+  find_package( JPEG )
+  if( JPEG_FOUND )
+    include_directories( ${JPEG_INCLUDE_DIR} )
+    set( LIBS_RENDERER ${LIBS_RENDERER} ${JPEG_LIBRARIES} )
+  else()
+    add_subdirectory( ${LIB_DIR}/jpeg ${OBJ_DIR}/libjpeg )
+    include_directories( ${LIB_DIR}/jpeg )
+    set( LIBSRC_RENDERER ${LIBSRC_RENDERER} ${JPEGLIST} )
+  endif()
 endif()
 
 # PNG
-find_package( PNG ${OPTIONAL_WIN32} )
-if( PNG_FOUND )
-  include_directories( ${PNG_INCLUDE_DIRS} )
-  set( LIBS_RENDERER ${LIBS_RENDERER} ${PNG_LIBRARIES} )
-else()
-  include_directories( ${LIB_DIR}/libpng )
-  if( ARCH STREQUAL "x86" )
-    set( LIBS_RENDERER ${LIBS_RENDERER} ${LIB_DIR}/libpng/libs/win32/libpng.lib )
-  elseif( ARCH STREQUAL "x86_64" )
-    set( LIBS_RENDERER ${LIBS_RENDERER} ${LIB_DIR}/libpng/libs/win32/libpng.lib )
+if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+  find_package( PNG ${OPTIONAL_WIN32} )
+  if( PNG_FOUND )
+    include_directories( ${PNG_INCLUDE_DIRS} )
+    set( LIBS_RENDERER ${LIBS_RENDERER} ${PNG_LIBRARIES} )
+  else()
+    include_directories( ${LIB_DIR}/libpng )
+    if( ARCH STREQUAL "x86" )
+      set( LIBS_RENDERER ${LIBS_RENDERER} ${LIB_DIR}/libpng/libs/win32/libpng.lib )
+    elseif( ARCH STREQUAL "x86_64" )
+      set( LIBS_RENDERER ${LIBS_RENDERER} ${LIB_DIR}/libpng/libs/win32/libpng.lib )
+    endif()
   endif()
 endif()
 
 # Freetype
-find_package( Freetype ${OPTIONAL_WIN32} )
-if( FREETYPE_FOUND )
-  include_directories( ${FREETYPE_INCLUDE_DIRS} )
-  set( LIBS_RENDERER ${LIBS_RENDERER} ${FREETYPE_LIBRARIES} )
-else()
-  include_directories( ${LIB_DIR}/freetype/include/freetype2 )
-  if( ARCH STREQUAL "x86" )
-    set( LIBS_RENDERER ${LIBS_RENDERER} ${LIB_DIR}/freetype/lib/freetype.lib )
-  elseif( ARCH STREQUAL "x86_64" )
-    set( LIBS_RENDERER ${LIBS_RENDERER} ${LIB_DIR}/freetype/lib/x64/freetype.lib )
+if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+  find_package( Freetype ${OPTIONAL_WIN32} )
+  if( FREETYPE_FOUND )
+    include_directories( ${FREETYPE_INCLUDE_DIRS} )
+    set( LIBS_RENDERER ${LIBS_RENDERER} ${FREETYPE_LIBRARIES} )
+  else()
+    include_directories( ${LIB_DIR}/freetype/include/freetype2 )
+    if( ARCH STREQUAL "x86" )
+      set( LIBS_RENDERER ${LIBS_RENDERER} ${LIB_DIR}/freetype/lib/freetype.lib )
+    elseif( ARCH STREQUAL "x86_64" )
+      set( LIBS_RENDERER ${LIBS_RENDERER} ${LIB_DIR}/freetype/lib/x64/freetype.lib )
+    endif()
   endif()
 endif()
 
 # GLEW
-find_package( GLEW )
-if( GLEW_FOUND )
-  include_directories( ${GLEW_INCLUDE_DIR} )
-  set( LIBS_RENDERER ${LIBS_RENDERER} ${GLEW_LIBRARIES} )
-else()
-  add_subdirectory( ${LIB_DIR}/glew ${OBJ_DIR}/libglew )
-  include_directories( ${LIB_DIR}/glew/include )
-  set( LIBS_RENDERER ${LIBS_RENDERER} INTERNAL_GLEW )
+if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+  find_package( GLEW )
+  if( GLEW_FOUND )
+    include_directories( ${GLEW_INCLUDE_DIR} )
+    set( LIBS_RENDERER ${LIBS_RENDERER} ${GLEW_LIBRARIES} )
+  else()
+    add_subdirectory( ${LIB_DIR}/glew ${OBJ_DIR}/libglew )
+    include_directories( ${LIB_DIR}/glew/include )
+    set( LIBS_RENDERER ${LIBS_RENDERER} INTERNAL_GLEW )
+  endif()
 endif()
 
 # OpenGL
-find_package( OpenGL REQUIRED )
-include_directories( ${OPENGL_INCLUDE_DIR} )
-set( LIBS_RENDERER ${LIBS_RENDERER} ${OPENGL_LIBRARIES} )
+if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+  find_package( OpenGL REQUIRED )
+  include_directories( ${OPENGL_INCLUDE_DIR} )
+  set( LIBS_RENDERER ${LIBS_RENDERER} ${OPENGL_LIBRARIES} )
+endif()
 
 # X11
-if( LINUX )
+if( LINUX AND ( BUILD_CLIENT OR BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD ) )
   find_package( X11 REQUIRED )
   include_directories( ${X11_INCLUDE_DIRS} )
   set( LIBS_CLIENT ${LIBS_CLIENT} ${X11_LIBRARIES} )
+  set( LIBS_RENDERER ${LIBS_RENDERER} ${X11_LIBRARIES} )
 endif()
 
 # OpenAL
-find_package( OpenAL )
-if( OPENAL_FOUND )
-  include_directories( ${OPENAL_INCLUDE_DIR} )
-else()
-  include_directories( ${LIB_DIR}/openal/include )
+if( BUILD_CLIENT )
+  find_package( OpenAL )
+  if( OPENAL_FOUND )
+    include_directories( ${OPENAL_INCLUDE_DIR} )
+  else()
+    include_directories( ${LIB_DIR}/openal/include )
+  endif()
 endif()
 
-
 # CURL
-find_package( CURL ${OPTIONAL_WIN32} )
-if( CURL_FOUND )
-  include_directories( ${CURL_INCLUDE_DIRS} )
-  set( LIBS_CLIENTBASE ${LIBS_CLIENTBASE} ${CURL_LIBRARIES} )
-else()
-  include_directories( ${LIB_DIR}/curl-7.21.6/include )
-  if( ARCH STREQUAL "x86" )
-    set( LIBS_CLIENTBASE ${LIBS_CLIENTBASE} ${LIB_DIR}/curl-7.21.6/lib/win32/release/libcurl_imp.lib )
-  elseif( ARCH STREQUAL "x86_64" )
-    set( LIBS_CLIENTBASE ${LIBS_CLIENTBASE} ${LIB_DIR}/curl-7.21.6/lib/win64/release/libcurl_imp.lib )
+if( BUILD_CLIENT OR BUILD_TTY_CLIENT )
+  find_package( CURL ${OPTIONAL_WIN32} )
+  if( CURL_FOUND )
+    include_directories( ${CURL_INCLUDE_DIRS} )
+    set( LIBS_CLIENTBASE ${LIBS_CLIENTBASE} ${CURL_LIBRARIES} )
+  else()
+    include_directories( ${LIB_DIR}/curl-7.21.6/include )
+    if( ARCH STREQUAL "x86" )
+      set( LIBS_CLIENTBASE ${LIBS_CLIENTBASE} ${LIB_DIR}/curl-7.21.6/lib/win32/release/libcurl_imp.lib )
+    elseif( ARCH STREQUAL "x86_64" )
+      set( LIBS_CLIENTBASE ${LIBS_CLIENTBASE} ${LIB_DIR}/curl-7.21.6/lib/win64/release/libcurl_imp.lib )
+    endif()
   endif()
 endif()
 
@@ -1119,11 +1141,6 @@ if( BUILD_CLIENT )
   get_target_property( LOCATION client LOCATION )
   get_filename_component( OUTPUT_NAME ${LOCATION} NAME )
   set( APPS ${APPS} Unvanquished/${OUTPUT_NAME} )
-
-  # Amanieu: Not sure if this is required
-  #if( MINGW )
-  #  target_link_libraries( client ${SDLMAIN_LIBRARY} )
-  #endif()
 endif()
 
 if( BUILD_SERVER )
