Fix typo in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -809,7 +809,7 @@ if( NOT ENABLE_QVM_COMPAT )
 endif()
 
 # SDL, required for all targets on win32 because of iconv
-if( BUILD_CLIENT OR BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD OR WIN32 )
+if( BUILD_CLIENT OR BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER OR WIN32 )
   find_package( SDL ${OPTIONAL_WIN32} )
   if( SDL_FOUND )
     include_directories( ${SDL_INCLUDE_DIR} )
@@ -935,7 +935,7 @@ if( BUILD_CLIENT )
 endif()
 
 # WebP
-if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+if( BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
   find_package( WebP )
   if( WEBP_FOUND )
     include_directories( ${WEBP_INCLUDE_DIRS} )
@@ -948,7 +948,7 @@ if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
 endif()
 
 # JPEG
-if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+if( BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
   find_package( JPEG )
   if( JPEG_FOUND )
     include_directories( ${JPEG_INCLUDE_DIR} )
@@ -961,7 +961,7 @@ if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
 endif()
 
 # PNG
-if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+if( BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
   find_package( PNG ${OPTIONAL_WIN32} )
   if( PNG_FOUND )
     include_directories( ${PNG_INCLUDE_DIRS} )
@@ -977,7 +977,7 @@ if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
 endif()
 
 # Freetype
-if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+if( BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
   find_package( Freetype ${OPTIONAL_WIN32} )
   if( FREETYPE_FOUND )
     include_directories( ${FREETYPE_INCLUDE_DIRS} )
@@ -993,7 +993,7 @@ if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
 endif()
 
 # GLEW
-if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+if( BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
   find_package( GLEW )
   if( GLEW_FOUND )
     include_directories( ${GLEW_INCLUDE_DIR} )
@@ -1006,14 +1006,14 @@ if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
 endif()
 
 # OpenGL
-if( BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD )
+if( BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER )
   find_package( OpenGL REQUIRED )
   include_directories( ${OPENGL_INCLUDE_DIR} )
   set( LIBS_RENDERER ${LIBS_RENDERER} ${OPENGL_LIBRARIES} )
 endif()
 
 # X11
-if( LINUX AND ( BUILD_CLIENT OR BUILD_RENDERER_NEW OR BUILD_RENDERER_OLD ) )
+if( LINUX AND ( BUILD_CLIENT OR BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER ) )
   find_package( X11 REQUIRED )
   include_directories( ${X11_INCLUDE_DIRS} )
   set( LIBS_CLIENT ${LIBS_CLIENT} ${X11_LIBRARIES} )
