Fix the regexp used for validating the md5sums file.

--- a/download-pk3.sh.in
+++ b/download-pk3.sh.in
@@ -153,7 +153,7 @@ fi
 
 # Check that the file is properly formatted
 echo '[33mVerifying md5sums integrity...[m'
-if grep -sqve '^[0-9a-f]\{32\} [ *][^.\\/][^ \\/]\*$' "$CACHE/md5sums"; then
+if grep -sqve '^[0-9a-f]\{32\} [ *][^ .\\/][^ \\/]*$' "$CACHE/md5sums"; then
   rm -f "$CACHE/md5sums"
   test -f "$CACHE/md5sums.old" && mv -f "$CACHE/md5sums.old" "$CACHE/md5sums"
   exit 1
