Fix Windows compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -798,11 +798,11 @@ set( LIBSRC_ENGINE ${LIBSRC_ENGINE} ${TINYGETTEXT_LIST} )
 
 # Native client
 if( MAC )
-  add_definitions( -DNACL_WIN32=0 -DNACL_LINUX=0 -DNACL_ANDRIOD=0 -DNACL_OSX=1 )
+  add_definitions( -DNACL_WINDOWS=0 -DNACL_LINUX=0 -DNACL_ANDRIOD=0 -DNACL_OSX=1 )
 elseif( LINUX )
-  add_definitions( -DNACL_WIN32=0 -DNACL_LINUX=1 -DNACL_ANDRIOD=0 -DNACL_OSX=0 )
+  add_definitions( -DNACL_WINDOWS=0 -DNACL_LINUX=1 -DNACL_ANDRIOD=0 -DNACL_OSX=0 )
 elseif( WIN32 )
-  add_definitions( -DNACL_WIN32=1 -DNACL_LINUX=0 -DNACL_ANDRIOD=0 -DNACL_OSX=0 )
+  add_definitions( -DNACL_WINDOWS=1 -DNACL_LINUX=0 -DNACL_ANDRIOD=0 -DNACL_OSX=0 )
 endif()
 if( ARCH STREQUAL "x86" OR ARCH STREQUAL "x86_64" )
   add_definitions( -DNACL_BUILD_ARCH=x86 )
@@ -855,9 +855,9 @@ if( GMP_FOUND )
 else()
   include_directories( ${LIB_DIR}/gmp/include )
   if( ARCH STREQUAL "x86" )
-    set( LIBS_ENGINE ${LIBS_ENGINE} ${LIB_DIR}/GMP/libs/win32/mpir.lib )
+    set( LIBS_ENGINE ${LIBS_ENGINE} ${LIB_DIR}/gmp/libs/win32/mpir.lib )
   elseif( ARCH STREQUAL "x86_64" )
-    set( LIBS_ENGINE ${LIBS_ENGINE} ${LIB_DIR}/GMP/libs/win64/mpir.lib )
+    set( LIBS_ENGINE ${LIBS_ENGINE} ${LIB_DIR}/gmp/libs/win64/mpir.lib )
   endif()
 endif()
 
