Work around a reported locale problem.
I've not been able to reproduce the problem here.

--- a/download-pk3.sh.in
+++ b/download-pk3.sh.in
@@ -12,6 +12,9 @@
 
 set -e
 
+# Work around a reported locale problem
+export LANG=C
+
 # Download from here
 BASE_URL='http://downloads.sourceforge.net/project/unvanquished/Assets/'
 MIRROR_DOMAIN='dl.sourceforge.net'
