--- a/main/presets/high.cfg
+++ b/main/presets/high.cfg
@@ -14,5 +14,5 @@ r_ext_texture_filter_anisotropic 8
 r_heathaze 1
 r_texturemode "GL_LINEAR_MIPMAP_LINEAR"
 cg_playerShadows 1
-cg_buidlableShadows 0
+cg_buildableShadows 0
 vid_restart
