--- a/main/presets/low.cfg
+++ b/main/presets/low.cfg
@@ -14,5 +14,5 @@ r_ext_texture_filter_anisotropic 2
 r_heathaze 0
 r_texturemode "GL_LINEAR_MIPMAP_NEAREST"
 cg_playerShadows 0
-cg_buidlableShadows 0
+cg_buildableShadows 0
 vid_restart
